k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: master-gateway
  labels:
    app.kubernetes.io/part-of: master-gateway
